--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,23 @@
 {
   "parser": "babel-eslint",
+  "plugins": ["react"],
+  "extends": "eslint:recommended",
   "rules": {
-    "no-unused-expressions": 1,
+    "eol-last": 1,
     "no-unused-vars": 1,
-    "strict": 0,
-    "new-cap": 0,
-    "camelcase": 0,
-    "react/jsx-uses-react": 1
+    "react/jsx-uses-react": 1,
+    "indent": [1, 2],
+    "no-var": 1,
+    "arrow-spacing": 1,
+    "arrow-parens": 1,
+    "prefer-const": 1
   },
-
-  "ecmaFeatures": {
-    "jsx": true
+  "globals": {
+    "BROWSER": true
   },
-
   "env": {
     "browser": true,
     "node": true,
     "es6": true
   },
-
-  "globals": {
-    "BROWSER": true
-  },
-
-  "plugins": ["react"]
-
 }
