--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development DEBUG=redux500 node index",
     "prod": "NODE_ENV=production PORT=8080 DEBUG=redux500 node index",
     "build": "NODE_ENV=production webpack --stats --progress --config ./webpack/prod.config.js",
-    "lint": "eslint src"
+    "lint": "eslint index.js src webpack"
   },
   "repository": {
     "type": "git",
