--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,13 @@
   "rules": {
     "eol-last": 1,
     "no-unused-vars": 1,
-    "react/jsx-uses-react": 1,
     "indent": [1, 2],
+    "quotes": [1, "double"],
     "no-var": 1,
     "arrow-spacing": 1,
     "arrow-parens": 1,
-    "prefer-const": 1
+    "prefer-const": 1,
+    "react/jsx-uses-react": 1
   },
   "globals": {
     "BROWSER": true
