--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example of an isomorphic React app using redux and webpack",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node index",
     "dev": "NODE_ENV=development DEBUG=redux500 node index",
     "prod": "NODE_ENV=production PORT=8080 DEBUG=redux500 node index",
     "build": "NODE_ENV=production webpack --stats --progress --config ./webpack/prod.config.js",
