Add postinstall script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=development DEBUG=redux500 node index",
     "prod": "NODE_ENV=production PORT=8080 DEBUG=redux500 node index",
     "build": "NODE_ENV=production webpack --stats --progress --config ./webpack/prod.config.js",
-    "lint": "eslint index.js src webpack"
+    "lint": "eslint index.js src webpack",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
