--- a/package.json
+++ b/package.json
@@ -35,27 +35,11 @@
   },
   "homepage": "https://github.com/gpbl/redux500#readme",
   "devDependencies": {
-    "autoprefixer-loader": "2.0.0",
-    "babel-core": "5.8.22",
-    "babel-eslint": "4.0.5",
-    "babel-loader": "5.3.2",
-    "clean-webpack-plugin": "0.1.3",
-    "css-loader": "0.16.0",
-    "eslint": "1.1.0",
-    "eslint-plugin-react": "3.2.2",
-    "extract-text-webpack-plugin": "0.8.2",
-    "file-loader": "0.8.4",
-    "node-sass": "3.2.0",
-    "react-a11y": "0.2.6",
     "react-hot-loader": "1.2.8",
-    "sass-loader": "2.0.1",
-    "strip-loader": "0.1.0",
-    "style-loader": "0.12.3",
-    "url-loader": "0.5.6",
-    "webpack": "1.11.0",
     "webpack-dev-server": "1.10.1"
   },
   "dependencies": {
+
     "babel": "5.8.21",
     "body-parser": "1.13.3",
     "compression": "1.5.2",
@@ -71,7 +55,25 @@
     "serialize-javascript": "1.0.0",
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
-    "superagent": "1.3.0"
+    "superagent": "1.3.0",
+
+    "autoprefixer-loader": "2.0.0",
+    "babel-core": "5.8.22",
+    "babel-eslint": "4.0.5",
+    "babel-loader": "5.3.2",
+    "clean-webpack-plugin": "0.1.3",
+    "css-loader": "0.16.0",
+    "eslint": "1.1.0",
+    "eslint-plugin-react": "3.2.2",
+    "extract-text-webpack-plugin": "0.8.2",
+    "file-loader": "0.8.4",
+    "node-sass": "3.2.0",
+    "sass-loader": "2.0.1",
+    "strip-loader": "0.1.0",
+    "style-loader": "0.12.3",
+    "url-loader": "0.5.6",
+    "webpack": "1.11.0"
+
   },
   "engines": {
     "node": "0.12.x"
