Enforce some stylistic rules
@geekyme beware! :-) 😱

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,28 @@
   "plugins": ["react"],
   "extends": "eslint:recommended",
   "rules": {
-    "eol-last": 1,
-    "no-unused-vars": 1,
-    "indent": [1, 2],
-    "quotes": [1, "double"],
-    "no-var": 1,
     "arrow-spacing": 1,
+    "curly": 1,
+    "eol-last": 1,
+    "indent": [1, 2],
+    "no-lonely-if": 1,
+    "no-spaced-func": 1,
+    "no-unused-vars": 1,
+    "no-var": 1,
     "prefer-const": 1,
-    "react/jsx-uses-react": 1
+    "quotes": [1, "double"],
+    "space-before-blocks": 1,
+
+    "react/jsx-curly-spacing": [1, "always"],
+    "react/jsx-no-duplicate-props": 1,
+    "react/jsx-no-undef": 1,
+    "react/jsx-quotes": [1, "double"],
+    "react/jsx-uses-react": 1,
+    "react/no-danger": 1,
+    "react/no-unknown-property": 1,
+    "react/self-closing-comp": 1,
+    "react/sort-comp": 1
+
   },
   "globals": {
     "BROWSER": true
