--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "NODE_ENV=production PORT=8080 DEBUG=redux500 node index",
     "build": "webpack --stats --progress --config ./webpack/prod.config.js",
     "lint": "eslint index.js src webpack",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "test": "mocha tests/* --compilers js:babel/register --recursive --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -39,39 +40,38 @@
     "webpack-dev-server": "1.10.1"
   },
   "dependencies": {
-
+    "autoprefixer-loader": "2.0.0",
     "babel": "5.8.21",
+    "babel-core": "5.8.22",
+    "babel-eslint": "4.0.5",
+    "babel-loader": "5.3.2",
     "body-parser": "1.13.3",
+    "chai": "^3.2.0",
     "compression": "1.5.2",
     "cookie-parser": "1.3.5",
+    "css-loader": "0.16.0",
+    "eslint": "1.1.0",
+    "eslint-plugin-react": "3.2.2",
     "express": "4.13.3",
+    "extract-text-webpack-plugin": "0.8.2",
+    "file-loader": "0.8.4",
+    "mocha": "^2.2.5",
     "morgan": "1.6.1",
+    "node-sass": "3.2.0",
     "react": "0.13.3",
     "react-redux": "0.8.2",
     "react-router": "1.0.0-beta3",
     "redux": "1.0.0",
     "redux-devtools": "1.0.2",
+    "sass-loader": "2.0.1",
     "serialize-javascript": "1.0.0",
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
-    "superagent": "1.3.0",
-
-    "autoprefixer-loader": "2.0.0",
-    "babel-core": "5.8.22",
-    "babel-eslint": "4.0.5",
-    "babel-loader": "5.3.2",
-    "css-loader": "0.16.0",
-    "eslint": "1.1.0",
-    "eslint-plugin-react": "3.2.2",
-    "extract-text-webpack-plugin": "0.8.2",
-    "file-loader": "0.8.4",
-    "node-sass": "3.2.0",
-    "sass-loader": "2.0.1",
     "strip-loader": "0.1.0",
     "style-loader": "0.12.3",
+    "superagent": "1.3.0",
     "url-loader": "0.5.6",
     "webpack": "1.11.0"
-
   },
   "engines": {
     "node": "0.12.x"
