--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-eslint": "4.0.5",
     "babel-loader": "5.3.2",
     "body-parser": "1.13.3",
-    "chai": "^3.2.0",
+    "chai": "3.2.0",
     "compression": "1.5.2",
     "cookie-parser": "1.3.5",
     "css-loader": "0.16.0",
@@ -55,7 +55,7 @@
     "express": "4.13.3",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
-    "mocha": "^2.2.5",
+    "mocha": "2.2.5",
     "morgan": "1.6.1",
     "node-sass": "3.2.0",
     "react": "0.13.3",
