--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ node_js:
   - "0.12"
 before_script:
   - "npm run lint"
+after_success:
+  - "npm run cover"
+  - "cat artifacts/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
