--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chai": "3.2.0",
     "compression": "1.5.2",
     "cookie-parser": "1.3.5",
+    "coveralls": "2.11.4",
     "css-loader": "0.16.0",
     "eslint": "1.1.0",
     "eslint-plugin-react": "3.2.2",
