--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "strip-loader": "0.1.0",
     "style-loader": "0.12.3",
     "superagent": "1.3.0",
-    "supertest": "^1.0.1",
+    "supertest": "1.0.1",
     "url-loader": "0.5.6",
     "webpack": "1.11.0"
   },
