--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "superagent": "1.3.0",
     "supertest": "1.0.1",
     "url-loader": "0.5.6",
-    "webpack": "1.11.0"
+    "webpack": "1.11.0",
+    "webpack-error-notification": "^0.1.4",
+    "webpack-stats-plugin": "0.1.0"
   },
   "engines": {
     "node": "0.12.x"
