--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint index.js src webpack",
     "postinstall": "npm run build",
     "test": "mocha tests/* --compilers js:babel/register --recursive --reporter spec",
-    "cover": "istanbul cover --dir artifacts -- _mocha tests/* --recursive --compilers js:babel/register --reporter spec"
+    "cover": "istanbul cover -- _mocha tests/* --recursive --compilers js:babel/register --reporter spec"
   },
   "repository": {
     "type": "git",
