Remove progress from the build script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node index",
     "dev": "NODE_ENV=development DEBUG=redux500 node index",
     "prod": "NODE_ENV=production PORT=8080 DEBUG=redux500 node index",
-    "build": "webpack --stats --progress --config ./webpack/prod.config.js",
+    "build": "webpack --stats --config ./webpack/prod.config.js",
     "lint": "eslint index.js src webpack",
     "postinstall": "npm run build",
     "test": "mocha tests/* --compilers js:babel/register --recursive --reporter spec",
