--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "3.2.2",
     "express": "4.13.3",
     "extract-text-webpack-plugin": "0.8.2",
+    "fetchr": "0.5.15",
     "file-loader": "0.8.4",
     "istanbul": "0.3.18",
     "mocha": "2.2.5",
