--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "supertest": "1.0.1",
     "url-loader": "0.5.6",
     "webpack": "1.11.0",
+    "webpack-cleanup-plugin": "0.1.1",
     "webpack-error-notification": "^0.1.4",
     "webpack-stats-plugin": "0.1.0"
   },
