--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
   "homepage": "https://github.com/gpbl/redux500#readme",
   "devDependencies": {
     "react-hot-loader": "1.2.8",
-    "webpack-dev-server": "1.10.1"
+    "webpack-dev-server": "1.10.1",
+    "redux-devtools": "1.0.2",
+    "webpack-error-notification": "0.1.4"
   },
   "dependencies": {
     "autoprefixer-loader": "2.0.0",
     "babel": "5.8.21",
     "babel-core": "5.8.22",
-    "babel-eslint": "4.0.5",
+    "babel-eslint": "4.1.0",
     "babel-loader": "5.3.2",
     "body-parser": "1.13.3",
     "chai": "3.2.0",
@@ -52,8 +54,8 @@
     "cookie-parser": "1.3.5",
     "coveralls": "2.11.4",
     "css-loader": "0.16.0",
-    "eslint": "1.1.0",
-    "eslint-plugin-react": "3.2.2",
+    "eslint": "1.2.1",
+    "eslint-plugin-react": "3.3.0",
     "express": "4.13.3",
     "extract-text-webpack-plugin": "0.8.2",
     "fetchr": "0.5.15",
@@ -63,21 +65,18 @@
     "morgan": "1.6.1",
     "node-sass": "3.2.0",
     "react": "0.13.3",
-    "react-redux": "0.8.2",
-    "react-router": "1.0.0-beta3",
-    "redux": "1.0.0",
-    "redux-devtools": "1.0.2",
+    "react-redux": "1.0.1",
+    "redux": "1.0.1",
     "sass-loader": "2.0.1",
-    "serialize-javascript": "1.0.0",
+    "serialize-javascript": "1.1.0",
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
     "style-loader": "0.12.3",
     "superagent": "1.3.0",
-    "supertest": "1.0.1",
+    "supertest": "1.1.0",
     "url-loader": "0.5.6",
-    "webpack": "1.11.0",
+    "webpack": "1.12.0",
     "webpack-cleanup-plugin": "0.1.1",
-    "webpack-error-notification": "^0.1.4",
     "webpack-stats-plugin": "0.1.0"
   },
   "engines": {
