--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "0.13.3",
     "react-redux": "1.0.1",
     "redux": "1.0.1",
+    "redux-promise": "0.5.0",
     "sass-loader": "2.0.1",
     "serialize-javascript": "1.1.0",
     "serve-favicon": "2.3.0",
