--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "node-sass": "3.2.0",
     "react": "0.13.3",
     "react-redux": "1.0.1",
+    "react-router": "1.0.0-beta3",
     "redux": "1.0.1",
     "sass-loader": "2.0.1",
     "serialize-javascript": "1.1.0",
