--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "webpack --stats --config ./webpack/prod.config.js",
     "lint": "eslint index.js src webpack",
     "postinstall": "npm run build",
-    "karma": "karma start tests/karma.conf.js",
-    "test": "mocha tests/server/* --compilers js:babel/register --recursive --reporter spec",
+    "test": "mocha tests/* --compilers js:babel/register --recursive --reporter spec",
     "cover": "istanbul cover -- _mocha tests/* --recursive --compilers js:babel/register --reporter spec"
   },
   "repository": {
@@ -38,14 +37,6 @@
   },
   "homepage": "https://github.com/gpbl/redux500#readme",
   "devDependencies": {
-    "karma": "0.13.9",
-    "karma-chai-plugins": "0.6.0",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-cli": "0.1.0",
-    "karma-firefox-launcher": "0.1.6",
-    "karma-mocha": "0.2.0",
-    "karma-safari-launcher": "0.1.1",
-    "karma-webpack": "1.7.0",
     "react-hot-loader": "1.2.8",
     "redux-devtools": "1.0.2",
     "webpack-dev-server": "1.10.1",
@@ -70,13 +61,6 @@
     "fetchr": "0.5.15",
     "file-loader": "0.8.4",
     "istanbul": "0.3.18",
-    "karma": "0.13.9",
-    "karma-chai-plugins": "0.6.0",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-cli": "0.1.0",
-    "karma-mocha": "0.2.0",
-    "karma-sourcemap-loader": "0.3.5",
-    "karma-webpack": "1.7.0",
     "mocha": "2.2.5",
     "morgan": "1.6.1",
     "node-sass": "3.2.0",
