--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
     "style-loader": "0.12.3",
+    "stylus-loader": "1.3.0",
     "superagent": "1.3.0",
     "supertest": "1.1.0",
     "url-loader": "0.5.6",
