--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cookie-parser": "1.3.5",
     "coveralls": "2.11.4",
     "css-loader": "0.16.0",
+    "css-modules-require-hook": "1.0.7",
     "eslint": "1.2.1",
     "eslint-plugin-react": "3.3.0",
     "express": "4.13.3",
@@ -63,6 +64,10 @@
     "istanbul": "0.3.18",
     "mocha": "2.2.5",
     "morgan": "1.6.1",
+    "postcss": "5.0.5",
+    "postcss-modules-extract-imports": "0.0.5",
+    "postcss-modules-local-by-default": "0.0.12",
+    "postcss-modules-scope": "0.0.8",
     "react": "0.13.3",
     "react-redux": "1.0.1",
     "react-router": "1.0.0-beta3",
