--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
     "style-loader": "0.12.3",
+    "stylus": "0.52.4",
     "stylus-loader": "1.3.0",
     "superagent": "1.3.0",
     "supertest": "1.1.0",
