--- a/package.json
+++ b/package.json
@@ -60,13 +60,15 @@
     "extract-text-webpack-plugin": "0.8.2",
     "fetchr": "0.5.15",
     "file-loader": "0.8.4",
+    "history": "1.9.1",
     "istanbul": "0.3.18",
     "mocha": "2.2.5",
     "morgan": "1.6.1",
     "react": "0.13.3",
-    "react-redux": "1.0.1",
-    "react-router": "1.0.0-beta3",
-    "redux": "1.0.1",
+    "react-redux": "2.1.2",
+    "react-router": "1.0.0-rc1",
+    "redux": "3.0.0",
+    "redux-devtools": "2.1.2",
     "serialize-javascript": "1.1.0",
     "serve-favicon": "2.3.0",
     "serve-static": "1.10.0",
