--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "morgan": "1.6.1",
     "react": "0.13.3",
     "react-redux": "2.1.2",
+    "react-resolver": "2.0.5",
     "react-router": "1.0.0-rc1",
     "redux": "3.0.0",
     "redux-devtools": "2.1.2",
